--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, h3, p{
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li{
+  margin: 0;
+  padding: 0;
+}
