--- a/src/components/Authorization/RegisterForm/registerForm.module.css
+++ b/src/components/Authorization/RegisterForm/registerForm.module.css
@@ -6,6 +6,8 @@
 .registerFormBody {
   align-items: center;
   padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .registerForm {
   display: flex;
@@ -78,4 +80,59 @@
   padding-left: 32px;
   color: red;
   font-size: 12px;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1280px) {
+  .registerForm {
+    width: 608px;
+  }
+  .registerFormItem {
+    width: 448px;
+  }
+
+  .registerFormButton {
+    width: 448px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+  .registerForm {
+    width: 300px;
+  }
+
+  .registerFormItem {
+    width: 280px;
+    font-size: 14px;
+    line-height: 19px;
+    /* Фоновый */
+
+    background: #fdf7f2;
+    border: 1px solid rgba(245, 146, 86, 0.5);
+    border-radius: 40px;
+  }
+
+  .registerFormButton {
+    width: 280px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .registerForm {
+    width: 100%;
+  }
+  .registerFormItem {
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    line-height: 19px;
+    /* Фоновый */
+
+    background: #fdf7f2;
+    border: 1px solid rgba(245, 146, 86, 0.5);
+    border-radius: 40px;
+  }
+
+  .registerFormButton {
+    width: 100%;
+  }
 }
