--- a/src/components/Authorization/RegisterForm/registerForm.module.css
+++ b/src/components/Authorization/RegisterForm/registerForm.module.css
@@ -50,7 +50,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 10px 28px;
+  padding: 10px 32px;
   margin-bottom: 16px;
 
   width: 458px;
@@ -72,6 +72,13 @@
 .registerFormButton:hover {
   background: #f59256;
   color: white;
+}
+
+.registerFormButton:disabled,
+.registerFormButton[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
 }
 
 .registerFormError {
