--- a/src/components/Authorization/RegisterForm/registerForm.module.css
+++ b/src/components/Authorization/RegisterForm/registerForm.module.css
@@ -25,6 +25,17 @@
   width: 618px;
 }
 
+.registerFormTitle {
+  margin-top: 60px;
+  margin-bottom: 40px;
+
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 49px;
+}
+
 .registerFormItemWrapper {
   margin-bottom: 20px;
 }
